2004-01-25  Mike Kestner  <mkestner@ximian.com>

	* gdk/gdk-api.xml : regen
	* gnome/gnome-api.xml : regen
	* gtk/gtk-api.xml : regen
	* parser/gapi2.xml.pl : handle typedef struct {...} Foo;
	[Fixes #53312]

2004-01-22  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* generator/Ctor.cs: Warnings was output like "ctor" fixed to
	output like "in ctor", like the rest of the warnings.

2004-01-21  John Luke  <jluke@cfl.rr.com>
	
	* vte/Makefile.in: fix so you can build from scratch

2004-01-21  Mike Kestner  <mkestner@ximian.com>

	* generator/Field.cs : kill Protection, restructure Generate
	and add FIXMEs for broken parts. Add StudlyName and move array
	fields to use Studly names.

2004-01-20  John Luke  <jluke@cfl.rr.com>

	* samples/GtkDemo:
	* samples/DbCLient: compile fixes, patch from
	Paul Duran <pauld@hutch.com.au>

2004-01-20  John D. Hardin <jhardin@impsec.org>

	* glue/type.c : ansi-c-ify some late var decls.

2004-01-19  John Luke  <jluke@cfl.rr.com>

	* vte/Makefile.in: fix it so you can build without having
	gtk# already installed

2004-01-19  Mike Kestner  <mkestner@ximian.com>

	* art/Art.metadata : correct a couple symbolic array_lens
	* art/art-api.xml : regen
	* gdk/Gdk.metadata : correct a symbolic array_len
	* gdk/gdk-api.xml : regen
	* generator/Field.cs : generate array fields with MarshalAs
	attrs for correct marshaling.

2004-01-18  Mike Kestner  <mkestner@ximian.com>

	* generator/Field.cs : refactored code from StructBase
	* generator/StructBase.cs : spin off Field class

2004-01-18  Mike Kestner  <mkestner@ximian.com>

	* generator/SymbolTable.cs : mangle parms named readonly

2004-01-18  Peter Williams  <peter@newton.cx>

	* glib/Marshaller.cs (ArrayPtrToArgv, ArgvToArrayPtr): new
	functions for marshalling and unmarshalling string arrays 
	to/from char **. Not pretty, but lets us call gtk_init()
	in Gtk.

	* gtk/Application.cs (do_init): New helper function to handle
	passing args to Gtk. Uses above functions.